# buddy

./: .gitignore  LICENSE  README.md  pyproject.toml
buddy/: __init__.py  __main__.py  app.py  audio_recorder.py  benchmark.py  claude_adapter.py  claude_api_adapter.py  config.py  control_panel.py  coords.py  hotkey.py  overlay_window.py  screenshot.py  state_machine.py  stt_whisper.py  tts.py  tts_kokoro.py  tts_piper.py  xlib_helpers.py
tests/: test_coords.py  test_point_parser.py  test_state_machine.py
