[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy"
version = "0.1.0"
description = "A Linux push-to-talk voice coworker that watches your screen and points at UI elements while you learn creative software like Blender and DaVinci Resolve."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriel Vasconcelos" }]

dependencies = [
    "PyGObject>=3.42",
    "pycairo>=1.20",
    "sounddevice>=0.4.6",
    "numpy>=1.23",
    "faster-whisper>=1.0",
    "pynput>=1.7",
    "python-xlib>=0.33",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
buddy = "buddy.__main__:main"

[tool.setuptools.packages.find]
include = ["buddy*"]
exclude = ["tests*"]
